# mneme

./: .config  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  source-dump.txt  source.txt  tsconfig.build.json  tsconfig.json
.github/workflows/: publish.yml
arke/: __init__.py  api.py  cli.py  config.py  corpus.py  digest.py  gen.py  loader.py  models.py  sdb.py  sweep.py  types.py
arke/clients/: cli.py  email.py  socket.py  tui.py
arke/digest/: __init__.py  sync.py
arke/eval/: download_corpora.py  gen.py  presets.py  sweep.py
arke/server/: backend_cloud.py  backend_local.py  bm25.py  chunker.py  config.py  loader.py  mailbox.py  main.py  models.py  space.py  stress.py  types.py  workspace.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css
dashboard/src/components/ui/: badge.tsx  button.tsx  card.tsx  table.tsx
dashboard/src/lib/: api.ts  utils.ts
deploy/: arke-mail.service  arke-server.service  arke-sync.service  arke.service
hooks/: pre-commit
mneme/: __init__.py  cache.py  chunker.py  cli.py  config.py  corpus.py  db.py  digest.py  gen.py  mneme.py  models.py  presets.py  sweep.py
mneme/core/: chunker.py  config.py  db.py  loader.py  models.py  types.py
mneme/eval/: __init__.py  cache.py  corpus.py  gen.py  metrics.py  presets.py  sweep.py
src/: chunker.ts  cli.ts  db.ts  defaults.ts  embedder.ts  eval.ts  index.ts  inference.ts  ingestion.ts  init.ts  llm.ts  mneme.ts  presets.ts  searcher.ts  store.ts
src/eval/: evaluation.ts  generation.ts  index.ts  presets.ts  sweep.ts
src/pipeline/: chunker.ts  config.ts  embedder.ts  index.ts  inference.ts  ingestion.ts  searcher.ts
src/server/: app.ts  index.ts  rate-limit.ts  routes.ts  schemas.ts  validate.ts
tests/: test_cache.py  test_chunker.py  test_config.py  test_email.py  test_loader.py  test_sweep.py  test_sync.py
